# cash_management

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 076054a5d5ae_add_moneyforward_account_name_to_m_.py  9e7455313af5_add_card_alert_sender_email_and_card_.py  ab52946b0389_initial_schema.py
backend/app/: main.py  models.py
backend/app/api/: accounts.py  budgets.py  category_rules.py  dashboard.py  health.py  reference.py  transactions.py  transfers.py
backend/app/cli/: run_daily_import.py
backend/app/core/: business_days.py  config.py  logging.py
backend/app/db/: e2e_seed.py  seed.py  session.py
backend/app/schemas/: account.py  budget.py  (+7 more)
backend/tests/: conftest.py  test_account_management.py  test_account_resolver.py  test_api_accounts.py  test_api_budgets.py  test_api_category_rules.py  test_api_dashboard.py  test_api_health.py  test_api_reference.py  test_api_transactions.py  test_api_transfers.py  test_backup.py  test_balance_snapshot.py  test_batch_orchestrator.py  test_budget_management.py  test_business_days.py  test_card_email_pipeline.py  test_card_parsers_registry.py  test_categorization.py  test_category_rule_management.py  test_cli_run_daily_import.py  test_csv_import_pipeline.py  test_dashboard_queries.py  test_db_session.py  test_dedup.py  test_discord_notify.py  test_mail_client.py  test_mf_assets_csv.py  test_mf_transactions_csv.py  test_retry.py  test_transaction_queries.py  test_transfer_detection.py  test_transfer_management.py
(+98 files in other folders)
